# DeepStream-Jetson-Orin-NX

./: .gitattributes  DongKhoi_MacThiBuoi.csv  README.md  RachBungBinh_NguyenThong_1.csv  TranHungDao_NguyenVanCu.csv  TranKhacChan_TranQuangKhai.csv  config_tracker_NvDCF_perf.yml  my_ds.py  myds_multi_channels_in_out.py  myds_pgie_config.txt  myds_tracker_config.txt
EDA/: EDA.ipynb
custom_parser/: CMakeLists.txt  CMakeLists_YOLOv9.txt  custom_parser.cpp  custom_parser_yolov9.cpp
groundtruth/: compute_metrics.py  draw.py  export.py  groundtruth.py
model/: augmentation.yaml  data.yaml  detection_rtdetr_res50_best_v3_b4_fp16.engine  detection_rtdetr_res50_epoch_431_v3.onnx  labels.txt  logging.yaml  model.yaml  training.yaml
